[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier"
description="PyTerrier"
requires-python = ">=3.8"
authors = [
  {name = "Craig Macdonald", email = "craig.macdonald@glasgow.ac.uk"},
]
maintainers = [
  {name = "Craig Macdonald", email = "craig.macdonald@glasgow.ac.uk"},
]
readme = "README.md"
classifiers = [
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Indexing",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "pyterrier.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
java = [
  'pyjnius>=1.4.2', # used by pt.java to execute Java code, such as Terrier
]
all = [
  'pyjnius>=1.4.2', # used by pt.java to execute Java code, such as Terrier
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
mypkg = ["README.md", "LICENSE.txt"]

[project.urls]
Repository = "https://github.com/terrier-org/pyterrier"
"Bug Tracker" = "https://github.com/terrier-org/pyterrier/issues"
Changelog = "https://github.com/terrier-org/pyterrier/releases"
CI = "https://github.com/terrier-org/pyterrier/actions"

[project.entry-points."pyterrier.java.init"]
"pyterrier.java" = "pyterrier.java:CoreJavaInit"
"pyterrier.terrier.java" = "pyterrier.terrier.java:TerrierJavaInit"

[project.entry-points."pyterrier.artifact"]
"sparse_index.terrier" = "pyterrier.terrier:TerrierIndex"

[project.entry-points."pyterrier.artifact.metadata_adapter"]
"terrier" = "pyterrier.terrier._metadata_adapter:terrier_artifact_metadata_adapter"

[project.entry-points."pyterrier.artifact.url_protocol_resolver"]
"hf" = "pyterrier._artifact:_hf_url_resolver"
"zenodo" = "pyterrier._artifact:_zenodo_url_resolver"

[project.entry-points."pyterrier.dataset_provider"]
"builtin" = "pyterrier.datasets._builtin:BuiltinDatasetProvider"
"irds" = "pyterrier.datasets._irds:IRDSDatasetProvider"


[tool.mypy]
disable_error_code = "import-untyped"
